# Evergarden

./: .gitignore  CMakeLists.txt  CMakeSettings.json  bDNN.cpp  bDNN.h  conan_bootstrap.cmake  datafeeder.h  exceptions.h  libevergarden.cpp  libevergarden.h  main.cpp  mrcg.cpp  mrcg.h  pcmio.cpp  pcmio.h  prediction.cpp  prediction.h  prediction_n.cpp  prediction_n.h  tensorflow_bootstrap.cmake
VAD/: bDNN.cpp  bDNN.h  datafeeder.cpp  datafeeder.h  mrcg.cpp  mrcg.h  prediction.cpp  prediction.h
